Update PDF Converter

--- a/App.config
+++ b/App.config
@@ -3,7 +3,7 @@
 	<configSections>
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+  <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
    <section name="PdfConverter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
   </sectionGroup>
  </configSections>
@@ -11,13 +11,9 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
 	</startup>
 	<appSettings>
+		<add key="MySqlConnection" value="Server=mysql-database.cver4ptvzbdj.sa-east-1.rds.amazonaws.com;Database=pd_grsnucleo;Uid=admin;Pwd=Ol9aLoN41o57vjaU9YX8a0v4bZa11L;Convert Zero Datetime=True" />
 		<add key="formatoImagem" value="Images (*.*;)|*.*;" />
 		<add key="dpi" value="300" />
-		<add key="CaminhoConnectionSqlite" value="Provider = Microsoft.Jet.OLEDB.4.0; Data Source = D:\Empresa\Clientes\COMPACTA\Application\ExtractFromPDf\bin\Debug\models\DB_ProcessPDF.db;Version=3;" />
-		<add key="CaminhoBancoBarcode" value="C:\ExtractPDF_CITO\" />
-		<add key="DiretorioInicial" value="D:\Empresa\Clientes\COMPACTA\ImagensDemo\" />
-		<add key="CaminhoImagem" value="C:\ImagensBarcodes\" />
-		<add key="ClientSettingsProvider.ServiceUri" value="" />
 	</appSettings>
 	<entityFramework>
 		<providers>
@@ -48,8 +44,20 @@
  <userSettings>
   <PdfConverter.Properties.Settings>
    <setting name="NumLote" serializeAs="String">
-    <value>1</value>
+    <value/>
    </setting>
   </PdfConverter.Properties.Settings>
  </userSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
